--- a/style.css
+++ b/style.css
@@ -1,67 +1,62 @@
-body {
-    font-family: Arial, Helvetica, sans-serif;
-    color: #777;
-    width: 960px;
-    background: #777;
-    font-size: 18px;
+* {
+    box-sizing: border-box;
     text-align: center;
-    margin: auto;
+}
+body {
+    width:960px;
+    color: #777777;
+    background: #777777;
+    font-size:18px;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 10px;
+    margin:auto;
+    line-height: 25px;
 }
 
-.h1 {
-    width:450px;
-    height;90px;
-    color: #777;
-    background: #ebebeb;
-    margin-left: 20px;
+.container {
+    padding: 20px;
 }
-.p {
-    width: 450px;
-    height: 30px;
-    margin-left: 20px;
-    color: #777;
+h1,
+p {
     background: #ebebeb;
+    color: #777777;
+    margin: 15px;
+    height: 55px;
 }
 
 header,
 nav,
-.section,
-.aside,
-.footer {
+footer {
     background: #ebebeb;
-    height: 120px;
-    width: 100%;
-    padding: auto;
-    text-align: center; 
-    margin-top: 20px;
-    float: left; 
-}
-
-.article {
-    background: #777;
-    width: 500px;
-    height: 150px;
-    margin-left: 12px;
-    color: #ebebeb;
-    text-align: center;
-}
-
-.section {
-    width: 55%;
-float: left; 
-margin-right: 40px;
-text-align: center;
-height: 220px;
-}
-
-.aside {
-    width: 40%;
-    float: left;    
-    height: 220px;   
-}
-.footer {
-    width: 960px;
-    color: #777;
-    background: #ebebeb;
+    margin-bottom: 8px;
     height: 100px;
+    clear:both;
+    
 }
+section {
+    float:left;
+    width:50%;
+    height:250px;
+    background: #ebebeb;
+    margin-bottom: 10px;
+}
+
+article {
+    color: #ebebeb;
+    background: #777777;
+    height: 180px;
+    margin: 10px;
+    margin-top: 40px;
+
+}
+    
+aside {
+    background: #ebebeb;
+    color: #777777;
+    width: 48%;
+    float: left;
+    height: 250px;
+    margin-left: 18px;
+}
+
+
